--- a/uncertainty_visual/package.xml
+++ b/uncertainty_visual/package.xml
@@ -55,6 +55,7 @@
   <build_depend>super_odometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>jsk_rviz_plugins</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
@@ -67,6 +68,7 @@
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>jsk_rviz_plugins</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
